# hunspell-rust

./: Cargo.toml
src/: lib.rs
