[package]
name = "hunspell"
version = "0.1.2"
authors = ["Lipka Boldizsár <lipkab@zoho.com>"]
description = "Rust bindings to the Hunspell library"
keywords = ["spellcheck", "hunspell"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/lipk/hunspell-rust"
edition = "2018"

[dependencies]
hunspell-sys = { git = "https://github.com/pilif/hunspell-sys.git", branch = "for-popscan" }
